# phiGEMM

./: .project  License  Makefile  README  README.md  TODO  configure  index.html  make.inc.template  params.json
include/: phigemm.h  phigemm_auxiliary.h  phigemm_common.h
install/: config.status  configure  configure.ac  make.inc.in
scripts/: addPhigemmSymbs.py  remPhigemmSymbs.py
src/: Makefile  autotuner.c  cpu-profiler.c  make.depend  phigemm.c  phigemm.f90  phigemm.h  phigemm_auxiliary.c  phigemm_auxiliary.h  phigemm_cgemm.c  phigemm_common.h  phigemm_dgemm.c  phigemm_dgemm_specialK.c  phigemm_env.c  phigemm_new.c  phigemm_sgemm.c  phigemm_zgemm.c  phigemm_zgemm_specialK.c
testing/: Makefile  clean.sh  example_submit_test.pbs  single_test.c  testsuite.sh
testing/serial/: compute_split_matrix.f90  cptimer.c  cuda_env.c  cuda_env.h  single_test.c
